# autoclicker-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  click.rs  lib.rs  main.rs
