[package]
name = "autoclicker_rs"
default-run = "autoclicker-rs"
version = "0.1.0"
authors = ["Robin Barnes"]
edition = "2021"
rust-version = "1.56"
include = ["src/**/*", "README.md"]

[[bin]]
name = "autoclicker-rs"
path = "src/main.rs"

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
serde = "1.0.137"
rand = "0.8.5"
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }

[build-dependencies]
cmake = "0.1"

[features]
#default = ["persistence"]
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 3
